# banco

./: .gitignore  Makefile  README.md  input_model.json  main.py  pyproject.toml
banco/: __init__.py  banco.py  teste.py
banco/input_validation/: input_schema.py
banco/models/: __init__.py  cliente.py  conta.py
banco/utils/: helper.py
input_model/: input_model.json
models/: cliente.py  conta.py
