[tool.poetry]
name = "banco"
version = "0.1.0"
description = ""
authors = ["Guilherme Fraga <guilwm@gmail.com>"]
readme = "README.md"
packages = [{include = "banco"}]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"