[tool.poetry]
name = "banco"
version = "0.1.0"
description = ""
authors = ["Guilherme Fraga <guilwm@gmail.com>"]
readme = "README.md"
packages = [{include = "banco"}]

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"
jsonschema = "^4.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"